2005-07-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/lily-parser-scheme.cc (LY_DEFINE): Guile 1.6 fix.

2005-07-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-socket.scm (grob-bbox): don't use inf? 

	* flower/include/rational.hh: add operator bool() 

	* scm/define-music-types.scm (music-descriptions): remove
	internal-class-name properties.

	* lily/include/event.hh: remove file.

	* lily/include/music-constructor.hh: remove file.

	* lily/parser.yy (Lily_lexer): check EVENT_IDENTIFIER using 'event
	in 'types property.

	* lily/music.cc (duration_length_callback): new function.

	* lily/event.cc: remove file.

	* lily/music-constructor.cc: remove file.

	* lily/music-scheme.cc (LY_DEFINE): rename to ly:make-music

	* lily/context.cc (get_grob_key): nop if use_object_keys not set.
	(get_context_key): idem.

	* scm/lily.scm (lambda): new option object-keys (default to #f)

	* scm/output-svg.scm (utf-8-string): rename  from utf8-string.

	* scm/output-gnome.scm: remove beam routine.

	* scm/output-ps.scm (scm): idem.

	* scm/output-svg.scm: remove beam.

	* ps/music-drawing-routines.ps: remove draw_beam.

	* lily/lookup.cc (beam): use round_filled_polygon() for beam.

	* flower/include/guile-compatibility.hh (scm_from_locale_string):
	add scm_from_locale_string compatibility glue. 

2005-07-13  Yoshinobu Isizaki  <isizaki@mte.biglobe.ne.jp>

	* scripts/lilypond-book.py: Prevent occuring error when
	'lilypond-book --output=foo/ somefile.ly' is executed multiple
	times and target file shoud be overwritten.  (Error message said
	'input file and output file is same'.)

2005-07-13  Graham Percival  <gperlist@shaw.ca>

	* input/regression/slur-extreme.ly,
	input/regression/slur-scoring.ly, lily/slur-configuration.cc,
	lily/slur.cc, mf/feta-din-code.mf, mf/feta-timesig.mf,
	mf/parmesan-heads.mf, scm/define-grob-properties.scm: Change
	"excentricity" to "eccentricity".

	* Documentation/user/converters.itely: fix URL for Noteedit and
	Rosegarden.
